fixed bug where menu behind services section

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -20,6 +20,7 @@ body, span,  p, h1, h2, h3, h4, h5, h6 {
 
 nav
 {
+    z-index: 9001;
     height: 5rem;
     position: fixed;
     box-shadow: none;
